structured the folder and began work on the html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Josh's Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -14,6 +14,24 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+    <header class="header">
+      <nav>
+          <a href="#">Home</a>
+          <a href="#">Services</a>
+          <a href="#">About</a>
+          <a class="lastNav" href="#">Contact</a>
+      </nav>
+    </header>
+    
+    <section class="main-content">
+      <div class="top-content">
+        <div class="about">
+          <h1>About Me</h1>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis magnam natus amet optio repellendus repudiandae vitae corrupti enim alias laboriosam modi expedita, deserunt labore deleniti voluptate eligendi, assumenda dicta soluta!</p>
+        </div>
+      </div>
+    </section>
+  </div>
 </body>
 </html>
