--- a/index.html
+++ b/index.html
@@ -27,11 +27,77 @@
     <section class="main-content">
       <div class="top-content">
         <div class="about">
-          <h1>About Me</h1>
+          <h4>About Me</h4>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis magnam natus amet optio repellendus repudiandae vitae corrupti enim alias laboriosam modi expedita, deserunt labore deleniti voluptate eligendi, assumenda dicta soluta!</p>
         </div>
+        <img class="headshot" src="" alt="Image of Josh">
+        <div class ="skills">
+          <h4>Skills</h4>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>Python</li>
+            <li>Git</li>
+            <li>SQLite</li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="work-history">
+          <h4>Work History</h4>
+          <table class="workHistoryTable">
+            <tr>
+              <th>Company</th>
+              <th>Position</th>
+              <th>Years</th>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Maria Anders</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td>Centro comercial Moctezuma</td>
+              <td>Francisco Chang</td>
+              <td>Mexico</td>
+            </tr>
+            <tr>
+              <td>Ernst Handel</td>
+              <td>Roland Mendel</td>
+              <td>Austria</td>
+            </tr>
+            <tr>
+              <td>Island Trading</td>
+              <td>Helen Bennett</td>
+              <td>UK</td>
+            </tr>
+            <tr>
+              <td>Laughing Bacchus Winecellars</td>
+              <td>Yoshi Tannamuri</td>
+              <td>Canada</td>
+            </tr>
+            <tr>
+              <td>Magazzini Alimentari Riuniti</td>
+              <td>Giovanni Rovelli</td>
+              <td>Italy</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+      <div class="bottom-content">
+        <form class="contact-form">
+          Name:<br>
+          <input type="text" name="fullname"><br>
+          Email:<br>
+          <input type="email" name="email"><br>
+          Phone:<br>
+          <input type="tel" name="phone"><br>
+          Message:<br>
+          <input type="text" name="message"><br><br>
+          <input type="submit">
+        </form>
       </div>
     </section>
-  </div>
+  </div> <!-- container -->
 </body>
 </html>
