--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         </div>
       </div>
       <div class="bottom-content">
+        <h4>Contact Me</h4>
+        <p>Please fill out this form and I will get back to you as soon as possible!</p>
         <form class="contact-form">
           Name:<br>
           <input type="text" name="fullname"><br>
@@ -93,7 +95,7 @@
           Phone:<br>
           <input type="tel" name="phone"><br>
           Message:<br>
-          <input type="text" name="message"><br><br>
+          <input class="textarea" type="textarea" name="message"><br><br>
           <input type="submit">
         </form>
       </div>
