added break points in the css to adjust the layout for viewing on a mobile device

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     
     <section class="main-content">
       <div class="top-content">
+          <!-- <img class="headshot" src="" alt="Image of Josh"> -->
         <div class="about">
           <h4>About Me</h4>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis magnam natus amet optio repellendus repudiandae vitae corrupti enim alias laboriosam modi expedita, deserunt labore deleniti voluptate eligendi, assumenda dicta soluta!</p>
         </div>
-        <img class="headshot" src="" alt="Image of Josh">
         <div class ="skills">
           <h4>Skills</h4>
           <ul>
